# c_project_template

./: .gitignore  LICENSE.md  Makefile  README.md  SConstruct  cmock_config.yaml  config.yaml  config.yml  meson.build
.github/workflows/: build.yaml  linter.yaml  merge-gatekeeper.yml  test.yaml  unit-tests.yaml  unit_tests_with_valgrind.yaml
scripts/: Makefile  create_makefile.rb  create_mock.rb  create_runner.rb  generate_test_runner.rb  install_cmock.sh  install_meson.sh  install_ruby.sh  install_scons.sh  install_valgrind.sh
src/: gardener.c  gardener.h  main.c  meson.build  utils.c  utils.h
src/utils/: logging_utils.c  logging_utils.h  meson.build  std_lib_utils.c  std_lib_utils.h
test/: meson.build  test_gardener.c  test_gardener.c~  test_main.c
test/runners/: runner_test_all.c  runner_test_gardener.c~
test/test_cmock.d/: meson.build  test_cmock.c
test/test_gardener.d/: meson.build  test_gardener.c
test/test_main.d/: meson.build  test_main.c
